Fixed community links overflowing

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -65,7 +65,7 @@ a:hover {
 .communities {
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-flow: row wrap;
 }
 
 .communityIcon {
